# pinas

./: .gitignore  BUILD.md  CLAUDE.md  MVP.md  MVP_PI.md  README.md  SCREENS.md  TODO.md
.auto-claude/specs/002-dans-le-centre-d-application-app-center-j-ai-cette/: api-verification.sh  build-progress.txt  implementation_plan.json
.github/workflows/: build-libreelec.yml
backend/: Cargo.toml
backend/migrations/: 001_initial.sql  002_packages.sql  003_app_registry.sql  004_groups_permissions.sql
backend/src/: main.rs
backend/src/api/: apps.rs  auth.rs  docker.rs  files.rs  groups.rs  middleware.rs  mod.rs  packages.rs  services.rs  setup.rs  shares.rs  storage.rs  system.rs  terminal.rs  users.rs  ws.rs
backend/src/config/: mod.rs
backend/src/db/: mod.rs
backend/src/models/: group.rs  manifest.rs  mod.rs  package.rs  session.rs  share.rs  user.rs
backend/src/services/: auth.rs  docker.rs  group.rs  mod.rs  package.rs  service.rs  session.rs  share.rs  storage.rs  system.rs  user.rs
docker/docker-compose/: docker-compose.yml
docker/dockerfiles/: backend.Dockerfile  frontend.Dockerfile
frontend/: package-lock.json  package.json  svelte.config.js  tailwind.config.js  vite.config.ts
frontend/src/: app.css  app.html
frontend/src/lib/components/apps/: AppCenter.svelte  (+15 more)
frontend/src/lib/i18n/: en.ts  fr.ts  index.ts
frontend/src/lib/stores/: api.ts  desktop.ts  onboarding.ts  system.ts  websocket.ts  windows.ts
frontend/src/routes/: +layout.svelte  +page.svelte
scripts/: build-arm64.sh  build-libreelec-image.sh  build-x86.sh  remote-build.sh
(+11 files in other folders)
