[package]
name = "pinas"
version = "0.1.0"
edition = "2021"
description = "PiNAS - Modern NAS OS Backend"
authors = ["PiNAS Team"]
license = "GPL-3.0"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["ws", "multipart", "macros"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs", "trace", "compression-gzip"] }

# Async runtime
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "migrate"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Auth
jsonwebtoken = "9"
argon2 = "0.5"

# System
nix = { version = "0.27", features = ["fs", "mount", "user", "process", "signal"] }
sysinfo = "0.30"
tokio-process = "0.2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

# Utils
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
anyhow = "1"
dotenvy = "0.15"

# Config
config = "0.14"

[dev-dependencies]
tokio-test = "0.4"

[profile.release]
lto = true
codegen-units = 1
strip = true
